<resources>
    <string name="app_name">PavlenkoPavlaPracitca7Pr-24.106</string>
    <string name="help">Помощь</string>
    <string name="Registration">Регистрация</string>
    <string name="Login">Вход</string>
    <string name="name">Введите ваше имя</string>
    <string name="surname">Введите вашу фамилию</string>
    <string name="phone">Введите ваш  номер</string>
    <string name="registbutton">Зарегистрироваться</string>
    <string name="checkbox">Согласен(-а) с условиями использования и политики конфиденциальности</string>
    <string name="ivan">Иван,</string>
    <string name="welcome">Приветствуем в нашем приложении</string>
    <string name="click">Клик</string>
    <string name="offerings">Предложения</string>
    <string name="moskow">Москва</string>
    <string name="saint">Санкт-Петербург</string>
    <string name="nowosib">Новосибирск</string>
    <string name="vlad">Владивосток</string>
    <string name="info">Подробная информация</string>
    <string name="robertfox">Robert Fox</string>
    <string name="albert">Albert Flores</string>
    <string name="kat">Kathryn Murphy</string>
    <string name="henry">Courtney Henry</string>
    <string name="pena">Eleanor Pena</string>
    <string name="marvin">Marvin McKinney</string>
    <string name="robertson">Darlene Robertson</string>
    <string name="bessie">Bessie Cooper</string>
</resources>