<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".listof">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Строка 1: Robert Fox -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView17"
                    android:layout_width="62dp"
                    android:layout_height="63dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedCorners"
                    app:srcCompat="@drawable/_25d8b4d13c6f68df3e67c13e5ddb90e8eb5cc79" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/Base.Theme.PavlenkoPavlaPracitca7Pr24106"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/robertfox"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView17"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Строка 2: Ralph Edwards -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView18"
                    android:layout_width="62dp"
                    android:layout_height="63dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedCorners"
                    app:srcCompat="@drawable/_3682821851426c2a112f09072a80c395c8fe3e7" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/Base.Theme.PavlenkoPavlaPracitca7Pr24106"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/albert"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView18"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/albert" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Строка 3: Cameron Williamson -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView19"
                    android:layout_width="62dp"
                    android:layout_height="63dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedCorners"
                    app:srcCompat="@drawable/_c1a1bd853f91bdb4d77135ff57c55ccae08026f" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/Base.Theme.PavlenkoPavlaPracitca7Pr24106"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/kat"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView19"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Строка 4: Leslie Alexander -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView20"
                    android:layout_width="62dp"
                    android:layout_height="63dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedCorners"
                    app:srcCompat="@drawable/_1bc531a4b4f1a6c9e6e350d76050c9c4edcaeee" />

                <TextView
                    android:id="@+id/textView11"
                    style="@style/Base.Theme.PavlenkoPavlaPracitca7Pr24106"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/henry"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView20"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/henry" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Строка 5: Brooklyn Simmons -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView21"
                    android:layout_width="62dp"
                    android:layout_height="63dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedCorners"
                    app:srcCompat="@drawable/_fa55eaa7e32e82cd30cccb42d34e48d12450cdc" />

                <TextView
                    android:id="@+id/textView12"
                    style="@style/Base.Theme.PavlenkoPavlaPracitca7Pr24106"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/pena"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView21"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/pena" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Строка 6: Jacob Jones -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView22"
                    android:layout_width="62dp"
                    android:layout_height="63dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedCorners"
                    app:srcCompat="@drawable/_11f8ea9ae4d750757c95e8718a4df65df2d73cd" />

                <TextView
                    android:id="@+id/textView13"
                    style="@style/Base.Theme.PavlenkoPavlaPracitca7Pr24106"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/marvin"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView22"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/marvin" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Строка 7: Kristin Watson -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView23"
                    android:layout_width="62dp"
                    android:layout_height="63dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedCorners"
                    app:srcCompat="@drawable/d002b3c73196a6e7e64f7cf99f0cc4eae6acf020" />

                <TextView
                    android:id="@+id/textView14"
                    style="@style/Base.Theme.PavlenkoPavlaPracitca7Pr24106"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/robertfox"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView23"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Строка 8: Marvin McKinney -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="16dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView24"
                    android:layout_width="62dp"
                    android:layout_height="63dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/RoundedCorners"
                    app:srcCompat="@drawable/_9a95ea4e37386ccda50ea85a18e5b1fe76f1750" />

                <TextView
                    android:id="@+id/textView15"
                    style="@style/Base.Theme.PavlenkoPavlaPracitca7Pr24106"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/bessie"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView24"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>